[package]
name = "tree-sitter-func"
description = "FunC grammar for tree-sitter"
version = "0.2.0"
authors = [
	"akifoq <akifoq@protonmail.com>",
	"Amaan Qureshi <amaanq12@gmail.com>",
	"Dan Volkov <die.marmelade@yandex.ru>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "func"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/amaanq/tree-sitter-func"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
